Public/stylesheets/main.css
/* Globals ----------------------------------------------------------------- */

:root {
  --dark-blue: #111930;
  --mid-blue: #356FCE;
  --light-blue: #BEDEFF;
  --very-light-blue: #E6F2FF;

  --dark-green: #027353;
  --mid-green: #038C33;
  --light-green: #5FBF1B;

  --yellow: #F2B94F;

  --dark-red: #BB0000;
  --mid-red: #CC4444;
  --light-red: #FFEEEE;

  --black: #2D2D2D;
  --dark-grey: #3E3E3E;
  --grey: #9A9A9A;
  --light-grey: #DADADA;
  --very-light-grey: #F1F1F1;
  --white: #FFFFFF;
}

/* Base styles ------------------------------------------------------------- */

* {
  box-sizing: border-box;
}

body {
  color: var(--black);
  background-color: var(--white);
  font-family: "Open Sans", -apple-system, "BlinkMacSystemFont", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  font-size: 16px;
  line-height: 1.2;
}

h1 {
  margin: 0;
  padding: 0;
  font-size: 23px;
  line-height: 1.2;
}

h2 {
  margin: 0;
  padding: 0;
  font-size: 35px;
  line-height: 1;
  letter-spacing: -0.5px;
}

h3 {
  font-size: 22px;
  line-height: 1.2;
}

h4 {
  font-size: 20px;
  line-height: 1.2;
}

a {
  color: var(--mid-blue);
  text-decoration: none;
}

strong {
  font-weight: 600;
}

small {
  font-size: 11px;
}

hr {
  margin: 5px 0;
  border: 0;
  height: 2px;
  background-color: var(--light-blue);
}

hr.short {
  margin: 5px auto;
  max-width: 50%;
  height: 1px;
}

::placeholder {
  color: var(--light-grey);
}

/* Icon font --------------------------------------------------------------- */

@font-face {
  font-family: "icomoon";
  src:
    url("/fonts/icomoon.ttf?6e6v40") format("truetype"),
    url("/fonts/icomoon.woff?6e6v40") format("woff"),
    url("/fonts/icomoon.svg?6e6v40#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

i.icon,
li.icon:before {
  speak: none;
  font-family: "icomoon" !important;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  vertical-align: middle;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

div i.icon {
  margin-right: 7px;
}

span i.icon {
  display: inline-block;
  margin-top: -3px;
  margin-right: 4px;
  font-size: 20px;
}

li.icon {
  list-style: none;
}

li.icon:before {
  margin-left: -35px;
  margin-right: 15px;
  color: var(--dark-grey);
  font-size: 18px;
}

i.osi:before { content: "\e900"; }
i.stable:before { content: "\e905"; }
i.beta:before { content: "\e906"; }
i.branch:before { content: "\e907"; }
i.question:before { content: "\e908"; }
i.warning:before { content: "\e909"; }

li.author:before { content: "\e901"; }
li.history:before { content: "\e902" }
li.activity:before { content: "\e903"; }
li.products:before { content: "\e904"; }

/* Overall layout ---------------------------------------------------------- */

.inner {
  margin: 0 auto;
  padding: 20px 10px;
  max-width: 800px;
}

.split {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

@media screen and (max-width: 767px) {
  .split {
    flex-direction: column;
    align-items: flex-start;
  }
}

section {
  margin: 40px 0;
}

section li {
  margin: 10px 0;
}

section li p {
  margin: 10px 0;
}

nav ul {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: row;
}

nav ul li {
  margin: 0 5px;
  list-style: none;
}

nav ul li a {
  padding: 3px;
  color: var(--white);
  font-size: 15px;
  font-weight: 600;
}

nav ul li a:hover {
  color: var(--yellow);
}

/* Header ------------------------------------------------------------------ */

header {
  color: var(--white);
  background-color: var(--dark-blue);
}

header .inner {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

@media screen and (max-width: 767px) {
  header .inner {
    flex-direction: column;
  }
}

header a {
  color: var(--white);
}

header h1 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

@media screen and (max-width: 767px) {
  header h1 {
    margin-bottom: 20px;
  }
}

header h1 img {
  margin-right: 10px;
  max-width: 64px;
}

header nav ul li a {
  border-bottom: 1px var(--light-blue) solid;
}

header nav ul li a:hover {
  border-color: var(--yellow);
}

/* Home page --------------------------------------------------------------- */

.search {
  margin: 0;
  background-color: var(--dark-blue);
  background-image: radial-gradient(rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.05) 75%);
}

.search .inner {
  padding: 70px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.search h3 {
  margin-bottom: 30px;
  text-align: center;
  color: white;
  font-size: 18px;
  font-weight: 600;
}

.search form {
  position: relative;
  margin: 0 auto;
  width: 90%;
  max-width: 500px;
}

.search textarea {
  padding: 12px;
  width: 100%;
  font-size: 25px;
  font-weight: 600;
  border: none;
  color: var(--black);
  resize: none;
  overflow: hidden;
}

.search textarea:focus {
  outline: none;
}

.recent {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.recent ul {
  padding: 0;
}

.recent li {
  display: flex;
  flex-direction: column;
}

/* Search results ---------------------------------------------------------- */

#results {
  margin-top: -4px;
  position: absolute;
  width: 100%;
  max-height: 500px;
  overflow: scroll;
  background-color: var(--white);
  border-top: 2px var(--light-blue) solid;
  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
  z-index: 9999;
}

#results ul {
  margin: 0;
  padding: 0;
}

#results li {
  margin: 0;
  padding: 20px;
  display: flex;
  flex-direction: column;
  border-bottom: 1px var(--light-grey) solid;
}

#results li:last-child {
  border: none;
}

#results li.selected {
  background-color: var(--very-light-blue);
}

#results div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
}

#results h4 {
  display: inline;
  margin: 0;
  padding: 0;
  font-size: 17px;
  color: var(--black);
}

#results small {
  font-size: 10px;
  color: var(--mid-blue);
}

#results p {
  margin: 5px 0 0 0;
  font-size: 14px;
  color: var(--black);
}

#results .no_results {
  padding: 40px;
  text-align: center;
  color: var(--dark-grey);
}

#results .more_results {
  padding: 20px;
  text-align: center;
  font-weight: 600;
  background-color: var(--very-light-grey);
  color: var(--dark-grey);
}

#results .error {
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--light-red);
}

#results .error .icon {
  margin: 20px;
  font-size: 40px;
  color: var(--mid-red);
}

#results .error h4 {
  margin-bottom: 10px;
  color: var(--dark-red);
}

#results .error p {
  margin: 0 20px;
  color: var(--dark-red);
}

/* Package page ------------------------------------------------------------ */

p.description {
  font-size: 19px;
}

.releases ul,
.language_platforms ul {
  padding: 0;
  list-style: none;
}

.language_platforms li {
  margin: 30px 0;
}

.language_platforms ul li ul {
  padding: 0 40px;
  list-style: disc;
}

.language_platforms ul li li {
  margin: 5px 0;
}

div.license {
  display: flex;
  align-items: center;
  padding: 7px 10px;
  border-radius: 8px;
  color: var(--white);
  font-weight: 600;
  font-size: 18px;
}

div.license {
  background-color: var(--light-green);
}

span.stable,
span.beta,
span.branch {
  font-weight: 600;
}

span.stable {
  color: var(--light-green);
}

span.beta {
  color: var(--mid-green);
}

span.branch {
  color: var(--dark-green);
}

/* Footer ------------------------------------------------------------------ */

footer {
  color: var(--white);
  background-color: var(--dark-blue);
}

footer .inner {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@media screen and (max-width: 767px) {
  footer .inner nav ul {
    flex-direction: column;
    align-items: center;
  }
}

